Fix for map cutoff (closes #103) (#106)

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -15,9 +15,11 @@
   #container {
     position: absolute;
     width: 100%;
-    height:100%;
+    /* 55px is the height of the header*/
+    height:calc(100% - 55px); 
     z-index: 0;
   }
+
   .slidingPane {
       position: absolute;
       top: 0;
