--- a/src/components/SlidingPane/SplitScreen.module.css
+++ b/src/components/SlidingPane/SplitScreen.module.css
@@ -29,7 +29,7 @@
     bottom: -64%;
     right: 0;
     top: auto;
-    height: 70%;
+    height: calc(70% - 40px);
     z-index: 10;
   }
   .slidingPane.open {
